Update value markup in .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,18 +2,18 @@
 NODE_ENV=
 
 # The URL used to interact with the WebSocket server running on @cryb/api
-API_WS_URL=
+API_WS_URL=ws://localhost:4000
 # The URL used to interact with the WebSocket server running on @cryb/aperture
-APERTURE_WS_URL=
+APERTURE_WS_URL=ws://localhost:9001
 
 # The URL used to interact with the REST API running on @cryb/api
-API_BASE_URL=
+API_BASE_URL=http://localhost:4000
 # The URL that @cryb/web is being hosted on. Locally, this would be 'http://localhost:3000'
-WEB_BASE_URL=
+WEB_BASE_URL=http://localhost:3000
 
 # The domain used while setting cookies. Locally, this would be 'localhost'. In production, this would be '.example.com'
 COOKIE_DOMAIN=
 
 # Nuxt.js Defaults
-HOST="0.0.0.0"
-NUXT_PORT="3000"
+HOST=0.0.0.0
+NUXT_PORT=3000
