Move branding config to environment.

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ COOKIE_DOMAIN=
 # Nuxt.js Defaults
 HOST=0.0.0.0
 NUXT_PORT=3000
+
+# Branding
+BRAND_NAME=Cryb
+BRAND_LANDING_VIDEO_ID=-eUJgIrWONo
+BRAND_GA_TRACKING_ID=
