Make branding in .env.example optional

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ COOKIE_DOMAIN=
 HOST=0.0.0.0
 NUXT_PORT=3000
 
-# Branding
-BRAND_NAME=Cryb
-BRAND_LANDING_VIDEO_ID=-eUJgIrWONo
-BRAND_GA_TRACKING_ID=
+# Optional: Branding
+# BRAND_NAME=
+# BRAND_LANDING_VIDEO_ID=
+# BRAND_GA_TRACKING_ID=
