JSMpeg options + key event defaults prevented

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ COOKIE_DOMAIN=
 HOST=0.0.0.0
 NUXT_PORT=3000
 
+# JSMPeg player options (kbs)
+VIDEO_BITRATE=2400
+AUDIO_BITRATE=128
+
 # Optional: Branding
 # BRAND_NAME=
 # BRAND_LANDING_VIDEO_ID=
