--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ COOKIE_DOMAIN=
 HOST=0.0.0.0
 NUXT_PORT=3000
 
-# JSMPeg player options (kbs)
+# JSMpeg player options (kbs)
 VIDEO_BITRATE=2400
 AUDIO_BITRATE=128
 
