--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-emoji": "^1.10.0",
     "nuxt": "^2.8.1",
     "nuxt-client-init-module": "^0.1.4",
-    "nuxt-clipboard2": "^0.2.1"
+    "nuxt-clipboard2": "^0.2.1",
+    "twemoji": "^12.1.3"
   }
 }
