--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsmpeg": "^1.0.0",
     "nuxt": "^2.10.1",
     "nuxt-client-init-module": "^0.1.6",
-    "nuxt-clipboard2": "^0.2.1"
+    "nuxt-clipboard2": "^0.2.1",
+    "vue-i18n": "^8.15.0"
   }
 }
