--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "date-fns": "^2.5.1",
     "dotenv": "^8.2.0",
     "jsmpeg": "^1.0.0",
+    "node-emoji": "^1.10.0",
+    "nuxt": "^2.8.1",
+    "nuxt-client-init-module": "^0.1.4",
+    "nuxt-clipboard2": "^0.2.1",
+    "twemoji": "^12.1.3"
   }
 }
