Add lint configs, move player placeholder locally, misc.

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ AUDIO_BITRATE=128
 # BRAND_NAME=
 # BRAND_LANDING_VIDEO_ID=
 # BRAND_GA_TRACKING_ID=
+
+# Optional: Show player's devtools - useful for debugging
+# SHOW_PLAYER_DEVTOOLS=true
