--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "nuxt-client-init-module": "^0.1.4",
     "nuxt-clipboard2": "^0.2.1",
     "twemoji": "^12.1.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.6.0",
+    "eslint-plugin-vue": "^5.2.3"
   }
 }
