--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nuxt": "^2.8.1",
     "nuxt-client-init-module": "^0.1.4",
     "nuxt-clipboard2": "^0.2.1",
+    "sanitize-html": "^1.20.1",
     "twemoji": "^12.1.3"
   },
   "devDependencies": {
