Workaround for WebGL JSMpeg errors

--- a/.env.example
+++ b/.env.example
@@ -29,4 +29,4 @@ AUDIO_BITRATE=128
 # SHOW_PLAYER_DEVTOOLS=true
 
 # Optional: Dist files public path - useful if you want to use a CDN
-# PUBLIC_PATH=
+# PUBLIC_PATH=/_cryb/
