Added support for custom janus url

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ API_WS_URL=ws://localhost:4000
 API_BASE_URL=http://localhost:4000
 # The URL that @cryb/web is being hosted on. Locally, this would be 'http://localhost:3000'
 WEB_BASE_URL=http://localhost:3000
+JANUS_URL=http://localhost:8088
 
 # The domain used while setting cookies. Locally, this would be 'localhost'. In production, this would be '.example.com'
 COOKIE_DOMAIN=
