--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@cryb/borealis": "^0.0.3",
     "@novnc/novnc": "^1.1.0",
     "@nuxtjs/axios": "^5.5.4",
     "browser-cookies": "^1.2.0",
