Better borealis integrations

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ NUXT_PORT=3000
 VIDEO_BITRATE=1200
 AUDIO_BITRATE=128
 
+# Optional: link to local Borealis repository for @cryb/borealis development. Not recommended—disabled in production
+# BOREALIS_REPOSITORY=
+
 # Optional: Branding
 # BRAND_NAME=
 # BRAND_LANDING_VIDEO_ID=
