Misc changes, bug fixing
* Code style changes
* Fixing a little chat bug
* Fix a misc bug

This has some things ToDo still.

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,6 @@ NODE_ENV=development
 ######################################
 # The URL used to interact with the WebSocket server running on @cryb/api
 API_WS_URL=ws://localhost:4000
-# The URL used to interact with the WebSocket server running on @cryb/aperture
-#APERTURE_WS_URL=
 
 ######################################
 #             Remote URLs            #
@@ -20,24 +18,20 @@ WEB_BASE_URL=http://localhost:3000
 ######################################
 #               JSMPEG               #
 ######################################
-#Rates are in kb/s
-VIDEO_BITRATE=1200
-AUDIO_BITRATE=128
+# (Note: Rates are in kb/s and should match with portal's)
+#VIDEO_BITRATE=1200
+#AUDIO_BITRATE=128
 
 ######################################
 #               Janus                #
 ######################################
-
 # ENABLE_JANUS controls which JS libraries the end user receives.
-# True sends janus.js and adapter.js
-# False sends jsmpeg.min.js
+ENABLE_JANUS=true
 
-#ENABLE_JANUS=true
-
-# Controls the url the website will go try to connect to for WebRTC negotiation
-
-#JANUS_URL=http://localhost
-#JANUS_PORT=8088
+# Controls the URL @cryb/web will go try to connect to for WebRTC negotiation
+# ToDo: Move this to be negotiated with API/portals.
+JANUS_URL=http://localhost
+JANUS_PORT=8088
 
 ######################################
 #              Branding              #
@@ -57,5 +51,5 @@ NUXT_PORT=3000
 # Optional: Show player's devtools - useful for debugging
 # SHOW_PLAYER_DEVTOOLS=true
 
-# Optional: Dist files public path - useful if you want to use a CDN
+# Dist files public path - useful if you want to use a CDN
 # PUBLIC_PATH=/_cryb/
