--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "scripts": {
     "start": "nuxt start",
     "build": "nuxt build",
+    "generate": "nuxt generate",
     "dev": "nuxt",
     "lint": "eslint ."
   },
   "dependencies": {
     "@cryb/borealis": "^1.0.3",
     "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/robots": "^2.4.2",
     "browser-cookies": "^1.2.0",
     "cookieparser": "^0.1.0",
     "date-fns": "^2.5.1",
