--- a/.env.example
+++ b/.env.example
@@ -30,8 +30,7 @@ ENABLE_JANUS=true
 
 # Controls the URL @cryb/web will go try to connect to for WebRTC negotiation
 # ToDo: Move this to be negotiated with API/portals.
-JANUS_URL=http://localhost
-JANUS_PORT=8088
+JANUS_URL=http://localhost:8088
 
 ######################################
 #              Branding              #
