misc doc. changes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# The environment the app is running in, either production, staging or development
-NODE_ENV=development
+# The environment the app is running in, either production or development
+NODE_ENV=production
 
 ######################################
 #           Websocket URLs           #
