--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "main": "dist/index.html",
   "scripts": {
-    "build": "cross-env NODE_ENV=production nuxt build",
-    "generate": "cross-env NODE_ENV=production nuxt generate",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
     "start": "nuxt start",
-    "dev": "cross-env NODE_ENV=development nuxt",
+    "dev": "nuxt",
     "lint": "eslint --ext .html,.js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
@@ -20,7 +20,6 @@
     "@nuxtjs/robots": "^2.4.2",
     "browser-cookies": "^1.2.0",
     "cookieparser": "^0.1.0",
-    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "node-emoji": "^1.10.0",
     "nuxt": "^2.12.2",
