--- a/.env.example
+++ b/.env.example
@@ -41,8 +41,8 @@ TURN_PASSWORD=
 # The domain used while setting cookies. Locally, this would be 'localhost'. In production, this would be '.example.com'
 COOKIE_DOMAIN=localhost
 # Nuxt.js Defaults
-NUXT_HOST=0.0.0.0
-NUXT_PORT=3000
+HOST=0.0.0.0
+PORT=3000
 # Optional: Show player's devtools - useful for debugging
 # SHOW_PLAYER_DEVTOOLS=true
 # Optional: link to local Borealis repository for @cryb/borealis development.
@@ -50,6 +50,3 @@ NUXT_PORT=3000
 
 # Dist files public path - useful if you want to use a CDN
 # PUBLIC_PATH=/_cryb/
-
-# Rendering mode - This should be set to 'ssr' for SSR, otherwise it'll use 'spa'.
-# RENDER_MODE=spa
